@@ -32,7 +32,6 @@ CLANG_WARN_OBJC_IMPLICIT_ATOMIC_PROPERTIES = YES
 //CLANG_WARN_OBJC_MISSING_PROPERTY_SYNTHESIS = YES
 GCC_WARN_ALLOW_INCOMPLETE_PROTOCOL = YES
 //GCC_WARN_MULTIPLE_DEFINITION_TYPES_FOR_SELECTOR = YES
-CLANG_WARN_OBJCPP_ARC_ABI = YES
 CLANG_WARN_DEPRECATED_OBJC_IMPLEMENTATIONS = YES
 CLANG_WARN_OBJC_RECEIVER_WEAK = YES
 //GCC_WARN_STRICT_SELECTOR_MATCH = YES
